<resources>
    <!--MainActivity-->
    <string name="app_name">HR Автоматизация</string>
    <string name="settings">Настройки</string>
    <string name="feedback">Отзыв разработчикам</string>
    <string name="action_exit">Выйти</string>
    <string name="action_settings">Настройки приложения</string>
    <string name="action_profile">Профиль</string>
    <string name="action_moderator">Связь с модератором</string>

    <!--Login - Email && Code-->
    <string name="your_email_input_field">Ваша рабочая почта</string>
    <string name="your_code_input_field">Код сообщения</string>
    <string name="login_dialog_ok_button">Подтвердить</string>

    <!--Employee/Profile-->
    <string name="employee_name">ФИО</string>
    <string name="about_employee">О себе</string>
    <string name="employee_post">Должность</string>
    <string name="employee_project">Проект</string>
    <string name="employee_email">Почта</string>
    <string name="profile_save_button">СОХРАНИТЬ</string>

    <!--Colleagues-->
    <string name="colleagues">Коллеги</string>
    <string name="clear_text">очистить строку</string>
    <string name="search_view_text">Введите фамилию и имя</string>


    <!--Products-->
    <string name="products">Продукты</string>
    <string name="product_img_contentDescription">Картинка продукта</string>
    <string name="product_image">Product image</string>
    <string name="order_product_dialog_positive">Да</string>
    <string name="order_product_dialog_negative">Нет</string>
    <string name="order_product_dialog_message">Заказать %1$s?</string>
    <string name="order_product_dialog_title">Заказ продукта</string>
    <string name="order_product_ordered">Продукт заказан</string>

    <!--FAQ-->
    <string name="faq">FAQ</string>
    <string name="arrow_right_description">Нажмите чтобы перейти</string>

    <!--Common-->
    <string name="toast_overall_error">Что-то пошло не так</string>
    <string name="error_user_id_is_null">ID пользователя null</string>
    <string name="error_no_auth_token">Нет АУФ токена</string>

    <!--Profile-->
    <string name="profile_save_success">Профиль успешно сохранен</string>
    <string name="try_again">Что-то пошло не так, попробуйте еще раз</string>

    <!--Restaurants-->
    <string name="where_to_eat">Где поесть</string>
    <string name="tab_map">Карта</string>
    <string name="tab_list">Список</string>
    <string name="restaurants_map_details">ДЕТАЛИ</string>
    <string name="restaurants_status_check">%1$s · %2$d ₽</string>
    <string name="close_card">close card</string>
    <string name="city_search">Введите город</string>
    <string name="choose_city">choose city</string>
    <string name="restaurants_gap_item_text">И еще %1$d ресторанов</string>
    <string name="restaurant_add_review_button_text">Оставить отзыв</string>
    <string name="restaurant_details_activity_action_bar">Детали ресторана</string>
    <string name="restaurant_item_name">%1$s  · </string>
    <string name="restaurnt_item_check">%1$d ₽</string>
    <string name="number_of_reviews">Отзывы (%1$d)</string>
    <string name="restaurant_review_content">Содержание отзыва (необязательно)</string>
    <string name="restaurant_review_cancel">ОТМЕНА</string>
    <string name="restaurant_review_check">Ваш чек (необязательно)</string>
    <string name="review_title">Отзыв - %1$s</string>
    <string name="item_bottom_sheet_restaurant_arrow_descripton">Переход на детали ресторана</string>
    <string name="restaurant_status">restaurant_status</string>
    <string name="restaurant_check">restaurant_check</string>
    <string name="restaurant_address">restaurant_address</string>
    <string name="restaurant_review_leave_a_mark">Пожалуйста, оставьте оценку</string>

    <!--Social-->
    <string name="events">События</string>
    <string name="event_image">Превью события</string>
    <string name="format_online">Онлайн формат</string>
    <string name="format_offline">Офлайн формат</string>
    <string name="format_combined">Совмещенный формат</string>
    <string name="default_date_text">Дата не выбрана</string>
    <string name="filter_by_city">По городу</string>
    <string name="default_city_text">Город не выбран</string>
    <string name="filter_by_format">По формату</string>
    <string name="default_format_text">Формат не выбран</string>
    <string name="action_filters">фильтры</string>
    <string name="filter_events">Фильтр событий</string>
    <string name="filter_accept_button_text">Применить</string>
    <string name="filter_by_name">По названию</string>
    <string name="enter_event_name">Введите название</string>
    <string name="filter_from_date">С даты</string>
    <string name="filter_to_date">По дату</string>
    <string name="event_format_choice_field">Поле выбора формата мероприятия</string>
    <string name="filter_by_date">Фильтрация по дате проведения</string>
    <string name="filter_by_city_icon">Иконка фильтрации по городу</string>
    <string name="event_format_online">онлайн</string>
    <string name="event_format_offline">оффлайн</string>
    <string name="event_format_combine">комбинированный</string>
    <string name="event_format_any">любой</string>
    <string name="event_details_description">Описание</string>
    <string name="event_details_date">Дата проведения</string>
    <string name="event_details_format">Формат</string>
    <string name="event_details_address">Адрес</string>
    <string name="event_details_image">Картинка события</string>
    <string name="event_channel_name">primary notification channel</string>
    <string name="event_channel_description">this channel is for event notification</string>
    <string name="materials_title">Материалы</string>
    <string name="image_of_file">изображение файл</string>
    <string name="date_format_with_timezone">%s МСК</string>
</resources>