<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_date"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/pickedDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pickedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date_text"
        app:layout_constraintBottom_toBottomOf="@+id/dateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dateLabel"
        app:layout_constraintTop_toTopOf="@+id/dateLabel" />

    <TextView
        android:id="@+id/cityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_city"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/dateLabel"
        app:layout_constraintTop_toBottomOf="@id/dateLabel" />

    <TextView
        android:id="@+id/pickedCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_city_text"
        app:layout_constraintBottom_toBottomOf="@id/cityLabel"
        app:layout_constraintEnd_toEndOf="@+id/pickedDate"
        app:layout_constraintStart_toStartOf="@+id/pickedDate"
        app:layout_constraintTop_toTopOf="@id/cityLabel" />

    <TextView
        android:id="@+id/formatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_format"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cityLabel"
        app:layout_constraintTop_toBottomOf="@id/cityLabel" />

    <TextView
        android:id="@+id/pickedFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_format_text"
        app:layout_constraintBottom_toBottomOf="@+id/formatLabel"
        app:layout_constraintEnd_toEndOf="@+id/pickedCity"
        app:layout_constraintStart_toStartOf="@+id/pickedCity"
        app:layout_constraintTop_toTopOf="@+id/formatLabel" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/filter_accept_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/reusableLoading"
        layout="@layout/reusable_loading"
        tools:visibility="gone" />

    <include
        android:id="@+id/reusableReload"
        layout="@layout/reusable_reload"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>