<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/employeeImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginVertical="25dp"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/employee_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/employeeFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="Alexandrinio Sidorkinio"
                android:textColor="@color/onSurface" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/employee_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:enabled="false"
                android:id="@+id/employeeFullEmail"
                android:text="Alexandrinio Sidorkinio"
                android:layout_height="wrap_content"
                android:textColor="@color/onSurface" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/employee_project">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/employeeFullProject"
                android:layout_width="match_parent"
                android:text="Alexandrinio Sidorkinio"
                android:layout_height="wrap_content"
                android:textColor="@color/onSurface" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/employee_post">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:layout_width="match_parent"
                android:id="@+id/employeeFullPost"
                android:text="Alexandrinio Sidorkinio"
                android:layout_height="wrap_content"
                android:textColor="@color/onSurface" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/about_employee">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:layout_width="match_parent"
                android:id="@+id/employeeFullAbout"
                android:text="Alexandrinio Sidorkinio"
                android:layout_height="wrap_content"
                android:textColor="@color/onSurface" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>